yolov7 setup , data divided into different folds

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import random\n",
     "import cv2\n",
     "from PIL import Image, ImageOps\n",
@@ -18,6 +19,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6acad6dc-4d2e-490e-bb63-6f7529072c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(1, '../src')\n",
+    "from utils import set_seed\n",
+    "\n",
+    "my_seed = 2402\n",
+    "set_seed(my_seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ab0ebaa5-92ee-4752-ac6b-5a7c022b7582",
    "metadata": {},
    "outputs": [],
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "76bb1bb8-4fc4-4169-91f5-45d513cc4584",
    "metadata": {},
    "outputs": [],
@@ -57,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "71c4ecb4-34d0-463f-af01-6ee8b3214a86",
    "metadata": {},
    "outputs": [],
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d0c4305a-2108-4475-9212-ba1013dec1d0",
    "metadata": {},
    "outputs": [],
@@ -282,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5da0b9be-9b05-46a8-8df7-eca1737e0899",
    "metadata": {},
    "outputs": [],
@@ -296,42 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5a5a39ac-4164-4918-8fdf-7c9b1b0c35fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wheat train dataset processed. Total files: 300\n",
-      "Wheat validation dataset processed. Total files: 400\n",
-      "Wheat test dataset processed. Total files: 500\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Process wheat dataset\n",
-    "wheat_train_images_file = os.path.join(datasets['wheat'], \"competition_train.csv\")\n",
-    "wheat_test_images_file = os.path.join(datasets['wheat'], \"competition_test.csv\")\n",
-    "wheat_val_images_file = os.path.join(datasets['wheat'], \"competition_val.csv\")\n",
-    "\n",
-    "wheat_train_dict = pick_wheat_images(wheat_train_images_file, 300)\n",
-    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_train_dict, dataset_files_counter)\n",
-    "print(f\"Wheat train dataset processed. Total files: {dataset_files_counter}\")\n",
-    "\n",
-    "wheat_val_dict = pick_wheat_images(wheat_val_images_file, 100)\n",
-    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_val_dict, dataset_files_counter)\n",
-    "print(f\"Wheat validation dataset processed. Total files: {dataset_files_counter}\")\n",
-    "\n",
-    "wheat_test_dict = pick_wheat_images(wheat_test_images_file, 100)\n",
-    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_test_dict, dataset_files_counter)\n",
-    "print(f\"Wheat test dataset processed. Total files: {dataset_files_counter}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "7ce813ce-4130-4968-82ed-c48c98176753",
    "metadata": {},
    "outputs": [
@@ -339,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soy dataset processed. Total files: 606\n"
+      "Soy dataset processed. Total files: 106\n"
      ]
     }
    ],
@@ -352,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "613d8cf4-3d76-466c-bbc2-9f97a9ba3fc4",
    "metadata": {},
    "outputs": [
@@ -360,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sunflower PCVP dataset processed. Total files: 804\n"
+      "Sunflower PCVP dataset processed. Total files: 304\n"
      ]
     }
    ],
@@ -386,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "033a3e2f-aecb-4133-bec1-a7906577eb59",
    "metadata": {},
    "outputs": [
@@ -394,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sunflower SCVP dataset processed. Total files: 921\n",
+      "Sunflower SCVP dataset processed. Total files: 421\n",
       "Sunflower SCVP predict files: 643\n"
      ]
     }
@@ -416,11 +396,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6df5b2e-67f4-4b8a-aaff-7e990d7f05d7",
+   "execution_count": 12,
+   "id": "5a5a39ac-4164-4918-8fdf-7c9b1b0c35fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wheat train dataset processed. Total files: 1121\n",
+      "Wheat validation dataset processed. Total files: 1271\n",
+      "Wheat test dataset processed. Total files: 1421\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process wheat dataset\n",
+    "wheat_train_images_file = os.path.join(datasets['wheat'], \"competition_train.csv\")\n",
+    "wheat_test_images_file = os.path.join(datasets['wheat'], \"competition_test.csv\")\n",
+    "wheat_val_images_file = os.path.join(datasets['wheat'], \"competition_val.csv\")\n",
+    "\n",
+    "wheat_train_dict = pick_wheat_images(wheat_train_images_file, 700)\n",
+    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_train_dict, dataset_files_counter)\n",
+    "print(f\"Wheat train dataset processed. Total files: {dataset_files_counter}\")\n",
+    "\n",
+    "wheat_val_dict = pick_wheat_images(wheat_val_images_file, 150)\n",
+    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_val_dict, dataset_files_counter)\n",
+    "print(f\"Wheat validation dataset processed. Total files: {dataset_files_counter}\")\n",
+    "\n",
+    "wheat_test_dict = pick_wheat_images(wheat_test_images_file, 150)\n",
+    "dataset_files_counter = make_new_dataset(datasets['wheat'], wheat_test_dict, dataset_files_counter)\n",
+    "print(f\"Wheat test dataset processed. Total files: {dataset_files_counter}\")"
+   ]
   }
  ],
  "metadata": {
