--- a/notebooks/draw_bboxes.ipynb
+++ b/notebooks/draw_bboxes.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "43ae6221-0150-4fbf-a6d6-19c2d4df152a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_folder = '../data/images/'\n",
-    "labels_folder = '../data/labels/'\n",
+    "images_folder = '../data/augmented_images/'\n",
+    "labels_folder = '../data/augmented_labels/'\n",
     "output_folder = '../data/bbox_images'\n",
     "\n",
     "# Create output folder if it doesn't exist\n",
@@ -37,14 +37,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image_192.png\n",
-      "image_424.png\n",
-      "image_492.png\n",
-      "image_301.png\n",
-      "image_411.png\n",
-      "image_143.png\n",
-      "image_483.png\n",
-      "image_399.png\n",
       "Bounding boxes have been drawn and images saved in the output folder.\n"
      ]
     }
@@ -93,6 +85,14 @@
     "\n",
     "print(\"Bounding boxes have been drawn and images saved in the output folder.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92b2b9e0-b1d1-41cb-ba4b-2f20bf9bee2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
